# dok

./: .gitignore  .~lock.output.docx#  CONTRIBUTING.md  README.md  input.dok  output.html  pyproject.toml
dok/: __init__.py  __main__.py  api.py  builder.py  cli.py  colors.py  constants.py  context.py  converter.py  docx_packaging.py  docx_styles.py  docx_writer.py  errors.py  html_writer.py  image.py  lexer.py  models.py  nodes.py  parser.py  registry.py  resolver.py  sugar.py  template.py  units.py  validator.py  writer_utils.py  xml_writer.py
examples/: 01-simple-letter.dok  02-report-with-tables.dok  03-resume.dok  04-invoice.dok  05-meeting-minutes.dok  06-certificate.dok  07-project-proposal.dok  08-arabic-document.dok  09-bilingual-report.dok  10-comprehensive-example.dok  11-simple-invoice.dok  12-dok-marketing.dok  13-dok-feature.dok  14-research-paper.dok  15-too-long.dok  16-020-update.dok  17-new-features.dok
tests/: test_api.py  test_colors.py  test_converter.py  test_integration.py  test_lexer.py  test_parser.py  test_resolver.py  test_sugar.py  test_units.py  test_validator.py
